# ContainerScaler-RL

./: .gitignore  ContainerScale_RL_v2_FINAL.md  ContainerScale_RL_v2_Review.md  IMPLEMENTATION_STATUS.md  PROJECT_PROPOSAL.md  README.md  fix-k3s-networking.sh  fix_backends.py  fix_notebook.py  pyproject.toml  test_bench.py  testing_walkthrough.md
configs/: dqn_training_config.yaml  env_config.yaml  training_config.yaml
deploy/: k3s-setup.sh  locustfile.py  online-boutique.yaml  podinfo.yaml  prometheus.yaml
results/ensemble_benchmark/: raw_results.csv  raw_results.json  run_config.json  statistical_tests.json  summary_table.csv  trajectories.json
results/explainability_ensemble/: saliency_data.json
results/full_benchmark/: raw_results.csv  raw_results.json  run_config.json  statistical_tests.json  summary_table.csv  trajectories.json
results/ppo_comparison/: raw_results.csv  raw_results.json  run_config.json  statistical_tests.json  summary_table.csv  trajectories.json
results/standardized_benchmark/: failure_analysis.json  raw_results.csv  raw_results.json  run_config.json  statistical_tests.json  summary_table.csv  trajectories.json
src/: __init__.py
src/agents/: __init__.py  agent.py  ensemble_agent.py  hpa_baseline.py
src/dashboard/: app.py
src/env/: __init__.py  k8s_sim.py  workload.py
src/evaluation/: __init__.py  baselines.py  metrics.py  (+10 more)
system-design/: README.md
tests/: __init__.py  conftest.py  test_benchmark_runner.py  test_ensemble.py  test_environment.py  test_hpa_baseline.py  test_metrics.py  test_safety_filter.py  test_workload.py
(+36 files in other folders)
